1.10.2 (1.5.4) Update
1.10.2 (1.5.3) was also not propely uploaded to GitHub. It was missing
files for some reason. Meaning (1.5.2) and (1.5.3) versions are both
corrupted in this repository.