@@ -1,8 +1,10 @@
 package gaia.entity.monster;
 
+import gaia.GaiaConfig;
 import gaia.entity.EntityAttributes;
-import gaia.entity.EntityMobBase;
-import gaia.init.GaiaItem;
+import gaia.entity.EntityMobPassiveBase;
+import gaia.init.GaiaItems;
+import gaia.items.ItemShard;
 
 import java.util.Collections;
 import java.util.List;
@@ -10,13 +12,15 @@ import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
 
+import javax.annotation.Nullable;
+
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIAttackOnCollide;
+import net.minecraft.entity.ai.EntityAIAttackMelee;
 import net.minecraft.entity.ai.EntityAIBase;
 import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILookIdle;
@@ -26,38 +30,55 @@ import net.minecraft.entity.ai.EntityAIWander;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.ai.attributes.AttributeModifier;
 import net.minecraft.entity.ai.attributes.IAttributeInstance;
+import net.minecraft.entity.monster.EntityEnderman;
 import net.minecraft.entity.monster.EntityEndermite;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.util.BlockPos;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.util.DamageSource;
-import net.minecraft.util.EntityDamageSource;
 import net.minecraft.util.EntityDamageSourceIndirect;
 import net.minecraft.util.EnumParticleTypes;
-import net.minecraft.util.MathHelper;
-import net.minecraft.util.Vec3;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.math.RayTraceResult;
+import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
 
+import com.google.common.base.Optional;
 import com.google.common.base.Predicate;
 import com.google.common.collect.Sets;
 
-public class EntityGaiaEnderDragonGirl extends EntityMobBase {
-	private static final UUID attackingSpeedBoostModifierUUID = UUID.fromString("020E0DFB-87AE-4653-9556-831010E291A0");
-	private static final AttributeModifier attackingSpeedBoostModifier = (new AttributeModifier(attackingSpeedBoostModifierUUID, "Attacking speed boost", 6.0D, 0)).setSaved(false);
-	private static final Set<Block> carriableBlocks = Sets.<Block>newIdentityHashSet();
-	private boolean isAggressive;
+/** 
+ * @see EntityEnderman
+ */
+public class EntityGaiaEnderDragonGirl extends EntityMobPassiveBase {
+	private static final UUID ATTACKING_SPEED_BOOST_ID = UUID.fromString("020E0DFB-87AE-4653-9556-831010E291A0");
+	private static final AttributeModifier ATTACKING_SPEED_BOOST = (new AttributeModifier(ATTACKING_SPEED_BOOST_ID, "Attacking speed boost", EntityAttributes.attackSpeedBoost, 0)).setSaved(false);
+	private static final Set<Block> CARRIABLE_BLOCKS = Sets.<Block>newIdentityHashSet();
+	private static final DataParameter<Optional<IBlockState>> CARRIED_BLOCK = EntityDataManager.<Optional<IBlockState>>createKey(EntityGaiaEnderDragonGirl.class, DataSerializers.OPTIONAL_BLOCK_STATE);
+	private static final DataParameter<Boolean> SCREAMING = EntityDataManager.<Boolean>createKey(EntityGaiaEnderDragonGirl.class, DataSerializers.BOOLEAN);
+
+	private int lastCreepySound;
+	private int targetChangeTime;
 
 	public EntityGaiaEnderDragonGirl(World worldIn) {
 		super(worldIn);
 		this.setSize(0.6F, 2.2F);
 		this.stepHeight = 1.0F;
+        this.isImmuneToFire = true;
+	}
+
+	protected void initEntityAI() {
 		this.tasks.addTask(0, new EntityAISwimming(this));
-		this.tasks.addTask(2, new EntityAIAttackOnCollide(this, 1.0D, false));
+		this.tasks.addTask(1, new EntityAIAttackMelee(this, EntityAttributes.attackSpeed2, false));
 		this.tasks.addTask(7, new EntityAIWander(this, 1.0D));
 		this.tasks.addTask(8, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
 		this.tasks.addTask(8, new EntityAILookIdle(this));
@@ -72,38 +93,89 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 		}));
 	}
 
-	public float getEyeHeight() {
-		return 1.90F;
-		//return 2.55F;
-	}
-
 	protected void applyEntityAttributes() {
 		super.applyEntityAttributes();
-		this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue((double)EntityAttributes.maxHealth2);
-		this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue((double)EntityAttributes.moveSpeed2);
-		this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue((double)EntityAttributes.attackDamage2);
-		this.getEntityAttribute(SharedMonsterAttributes.followRange).setBaseValue(EntityAttributes.followrange);
+		this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue((double)EntityAttributes.maxHealth2);
+		this.getEntityAttribute(SharedMonsterAttributes.FOLLOW_RANGE).setBaseValue(EntityAttributes.followrange);
+		this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(EntityAttributes.moveSpeed2);
+		this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue((double)EntityAttributes.attackDamage2);
+        this.getEntityAttribute(SharedMonsterAttributes.ARMOR).setBaseValue(EntityAttributes.rateArmor2);
+	}
+	
+    public void setAttackTarget(@Nullable EntityLivingBase entitylivingbaseIn)
+    {
+        super.setAttackTarget(entitylivingbaseIn);
+        IAttributeInstance iattributeinstance = this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED);
+
+        if (entitylivingbaseIn == null)
+        {
+            this.targetChangeTime = 0;
+            this.dataManager.set(SCREAMING, Boolean.valueOf(false));
+            iattributeinstance.removeModifier(ATTACKING_SPEED_BOOST);
+        }
+        else
+        {
+            this.targetChangeTime = this.ticksExisted;
+            this.dataManager.set(SCREAMING, Boolean.valueOf(true));
+
+            if (!iattributeinstance.hasModifier(ATTACKING_SPEED_BOOST))
+            {
+                iattributeinstance.applyModifier(ATTACKING_SPEED_BOOST);
+            }
+        }
+    }
+	
+	public float getEyeHeight() {
+		return 1.90F;
 	}
 
-	public int getTotalArmorValue() {
-		return EntityAttributes.rateArmor2;
+	public boolean attackEntityFrom(DamageSource source, float damage) {
+		if (damage > EntityAttributes.baseDefense2) {
+			damage = EntityAttributes.baseDefense2;
+		}
+		
+		if (this.isEntityInvulnerable(source)) {
+			return false;
+		} else if (source instanceof EntityDamageSourceIndirect) {
+			for (int i = 0; i < 64; ++i) {
+				if (this.teleportRandomly()) {
+					return true;
+				}
+			}
+
+			return false;
+		} else {
+			boolean flag = super.attackEntityFrom(source, damage);
+
+			if (source.isUnblockable() && this.rand.nextInt(10) != 0) {
+				this.teleportRandomly();
+			}
+
+			return flag;
+		}
+	}
+
+    public void knockBack(Entity entityIn, float strenght, double xRatio, double zRatio) {
+		super.knockBack(entityIn, strenght, xRatio, zRatio, EntityAttributes.knockback2);
 	}
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Short((short)0));
-		this.dataWatcher.addObject(17, new Byte((byte)0));
-		this.dataWatcher.addObject(18, new Byte((byte)0));
+		this.dataManager.register(CARRIED_BLOCK, Optional.<IBlockState>absent());
+		this.dataManager.register(SCREAMING, Boolean.valueOf(false));
 	}
 
 	/**
 	 * (abstract) Protected helper method to write subclass entity data to NBT.
 	 */
-	public void writeEntityToNBT(NBTTagCompound tagCompound) {
-		super.writeEntityToNBT(tagCompound);
+	public void writeEntityToNBT(NBTTagCompound tag) {
+		super.writeEntityToNBT(tag);
 		IBlockState iblockstate = this.getHeldBlockState();
-		tagCompound.setShort("carried", (short)Block.getIdFromBlock(iblockstate.getBlock()));
-		tagCompound.setShort("carriedData", (short)iblockstate.getBlock().getMetaFromState(iblockstate));
+
+		if (iblockstate != null) {
+			tag.setShort("carried", (short)Block.getIdFromBlock(iblockstate.getBlock()));
+			tag.setShort("carriedData", (short)iblockstate.getBlock().getMetaFromState(iblockstate));
+		}
 	}
 
 	/**
@@ -129,14 +201,14 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 	private boolean shouldAttackPlayer(EntityPlayer player) {
 		ItemStack itemstack = player.inventory.armorInventory[3];
 
-		if (itemstack != null && itemstack.getItem() == Item.getItemFromBlock(Blocks.pumpkin)) {
+		if (itemstack != null && itemstack.getItem() == Item.getItemFromBlock(Blocks.PUMPKIN)) {
 			return false;
 		} else {
-			Vec3 vec3 = player.getLook(1.0F).normalize();
-			Vec3 vec31 = new Vec3(this.posX - player.posX, this.getEntityBoundingBox().minY + (double)(this.height / 2.0F) - (player.posY + (double)player.getEyeHeight()), this.posZ - player.posZ);
-			double d0 = vec31.lengthVector();
-			vec31 = vec31.normalize();
-			double d1 = vec3.dotProduct(vec31);
+			Vec3d vec3d = player.getLook(1.0F).normalize();
+			Vec3d vec3d1 = new Vec3d(this.posX - player.posX, this.getEntityBoundingBox().minY + (double)this.getEyeHeight() - (player.posY + (double)player.getEyeHeight()), this.posZ - player.posZ);
+			double d0 = vec3d1.lengthVector();
+			vec3d1 = vec3d1.normalize();
+			double d1 = vec3d.dotProduct(vec3d1);
 			return d1 > 1.0D - 0.025D / d0 ? player.canEntityBeSeen(this) : false;
 		}
 	}
@@ -163,17 +235,11 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 			this.attackEntityFrom(DamageSource.drown, 1.0F);
 		}
 
-		if (this.isScreaming() && !this.isAggressive && this.rand.nextInt(100) == 0) {
-			this.setScreaming(false);
-		}
-
-		if (this.worldObj.isDaytime()) {
+		if (this.worldObj.isDaytime() && this.ticksExisted >= this.targetChangeTime + 600) {
 			float f = this.getBrightness(1.0F);
 
 			if (f > 0.5F && this.worldObj.canSeeSky(new BlockPos(this)) && this.rand.nextFloat() * 30.0F < (f - 0.4F) * 2.0F) {
 				this.setAttackTarget((EntityLivingBase)null);
-				this.setScreaming(false);
-				this.isAggressive = false;
 				this.teleportRandomly();
 			}
 		}
@@ -195,236 +261,144 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 	 * Teleport the enderman to another entity
 	 */
 	protected boolean teleportToEntity(Entity p_70816_1_) {
-		Vec3 vec3 = new Vec3(this.posX - p_70816_1_.posX, this.getEntityBoundingBox().minY + (double)(this.height / 2.0F) - p_70816_1_.posY + (double)p_70816_1_.getEyeHeight(), this.posZ - p_70816_1_.posZ);
-		vec3 = vec3.normalize();
+		Vec3d vec3d = new Vec3d(this.posX - p_70816_1_.posX, this.getEntityBoundingBox().minY + (double)(this.height / 2.0F) - p_70816_1_.posY + (double)p_70816_1_.getEyeHeight(), this.posZ - p_70816_1_.posZ);
+		vec3d = vec3d.normalize();
 		double d0 = 16.0D;
-		double d1 = this.posX + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3.xCoord * d0;
-		double d2 = this.posY + (double)(this.rand.nextInt(16) - 8) - vec3.yCoord * d0;
-		double d3 = this.posZ + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3.zCoord * d0;
+		double d1 = this.posX + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3d.xCoord * 16.0D;
+		double d2 = this.posY + (double)(this.rand.nextInt(16) - 8) - vec3d.yCoord * 16.0D;
+		double d3 = this.posZ + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3d.zCoord * 16.0D;
 		return this.teleportTo(d1, d2, d3);
 	}
 
 	/**
 	 * Teleport the enderman
 	 */
-	protected boolean teleportTo(double x, double y, double z) {
+	private boolean teleportTo(double x, double y, double z) {
 		net.minecraftforge.event.entity.living.EnderTeleportEvent event = new net.minecraftforge.event.entity.living.EnderTeleportEvent(this, x, y, z, 0);
 		if (net.minecraftforge.common.MinecraftForge.EVENT_BUS.post(event)) return false;
-		double d0 = this.posX;
-		double d1 = this.posY;
-		double d2 = this.posZ;
-		this.posX = event.targetX;
-		this.posY = event.targetY;
-		this.posZ = event.targetZ;
-		boolean flag = false;
-		BlockPos blockpos = new BlockPos(this.posX, this.posY, this.posZ);
+		boolean flag = this.attemptTeleport(event.getTargetX(), event.getTargetY(), event.getTargetZ());
 
-		if (this.worldObj.isBlockLoaded(blockpos)) {
-			boolean flag1 = false;
+		if (flag) {
+			this.worldObj.playSound((EntityPlayer)null, this.prevPosX, this.prevPosY, this.prevPosZ, SoundEvents.ENTITY_ENDERMEN_TELEPORT, this.getSoundCategory(), 1.0F, 1.0F);
+			this.playSound(SoundEvents.ENTITY_ENDERMEN_TELEPORT, 1.0F, 1.0F);
+		}
 
-			while (!flag1 && blockpos.getY() > 0) {
-				BlockPos blockpos1 = blockpos.down();
-				Block block = this.worldObj.getBlockState(blockpos1).getBlock();
+		return flag;
+	}
 
-				if (block.getMaterial().blocksMovement()) {
-					flag1 = true;
-				}
-				else {
-					--this.posY;
-					blockpos = blockpos1;
+	protected SoundEvent getAmbientSound() {
+		return this.isScreaming() ? SoundEvents.ENTITY_ENDERMEN_SCREAM : SoundEvents.ENTITY_ENDERMEN_AMBIENT;
+	}
+
+	protected SoundEvent getHurtSound() {
+		return SoundEvents.ENTITY_ENDERMEN_HURT;
+	}
+
+	protected SoundEvent getDeathSound() {
+		return SoundEvents.ENTITY_ENDERMEN_DEATH;
+	}
+
+	protected void dropFewItems(boolean wasRecentlyHit, int lootingModifier) {
+		if (wasRecentlyHit) {
+			int var3 = this.rand.nextInt(3 + lootingModifier);
+
+			for (int var4 = 0; var4 < var3; ++var4) {
+				this.dropItem(Items.ENDER_PEARL, 1);
+			}
+
+			//Nuggets/Fragments
+			int var11 = this.rand.nextInt(3) + 1;
+
+			for (int var12 = 0; var12 < var11; ++var12) {
+				ItemShard.Drop_Nugget(this,1);
+			}
+
+			if (GaiaConfig.AdditionalOre == true) {
+				int var13 = this.rand.nextInt(3) + 1;
+
+				for (int var14 = 0; var14 < var13; ++var14) {
+					ItemShard.Drop_Nugget(this,5);
 				}
 			}
 
-			if (flag1) {
-				super.setPositionAndUpdate(this.posX, this.posY, this.posZ);
-
-				if (this.worldObj.getCollidingBoundingBoxes(this, this.getEntityBoundingBox()).isEmpty() && !this.worldObj.isAnyLiquid(this.getEntityBoundingBox())) {
-					flag = true;
-				}
+			//Very Rare
+			if ((this.rand.nextInt(EntityAttributes.rateraredrop) == 0 || this.rand.nextInt(1) > 0)) {
+				this.dropItem(GaiaItems.SpawnEnderGirl,1);
+			}
+			
+			if ((this.rand.nextInt(EntityAttributes.rateraredrop) == 0 || this.rand.nextInt(1) > 0)) {
+				this.dropItem(Items.ELYTRA,1);
 			}
 		}
-
-		if (!flag) {
-			this.setPosition(d0, d1, d2);
-			return false;
-		} else {
-			int i = 128;
-
-			for (int j = 0; j < i; ++j) {
-				double d6 = (double)j / ((double)i - 1.0D);
-				float f = (this.rand.nextFloat() - 0.5F) * 0.2F;
-				float f1 = (this.rand.nextFloat() - 0.5F) * 0.2F;
-				float f2 = (this.rand.nextFloat() - 0.5F) * 0.2F;
-				double d3 = d0 + (this.posX - d0) * d6 + (this.rand.nextDouble() - 0.5D) * (double)this.width * 2.0D;
-				double d4 = d1 + (this.posY - d1) * d6 + this.rand.nextDouble() * (double)this.height;
-				double d5 = d2 + (this.posZ - d2) * d6 + (this.rand.nextDouble() - 0.5D) * (double)this.width * 2.0D;
-				this.worldObj.spawnParticle(EnumParticleTypes.PORTAL, d3, d4, d5, (double)f, (double)f1, (double)f2, new int[0]);
-			}
-
-			this.worldObj.playSoundEffect(d0, d1, d2, "mob.endermen.portal", 1.0F, 1.0F);
-			this.playSound("mob.endermen.portal", 1.0F, 1.0F);
-			return true;
-		}
 	}
 
-	protected String getLivingSound() {
-		return this.isScreaming() ? "mob.endermen.scream" : "mob.endermen.idle";
-	}
-
-	protected String getHurtSound() {
-		return "mob.endermen.hit";
-	}
-
-	protected String getDeathSound() {
-		return "mob.endermen.death";
-	}
-
-	protected void dropFewItems(boolean par1, int par2) {
-		int var3 = this.rand.nextInt(3 + par2);
-
-		for (int var4 = 0; var4 < var3; ++var4) {
-			this.dropItem(Items.ender_pearl, 1);
-		}
-		
-		int var5 = this.rand.nextInt(3 + par2) + 1;
-
-		for (int var6 = 0; var6 < var5; ++var6) {
-			this.dropItem(Item.getItemFromBlock(Blocks.end_stone), 1);
-		}
-
-		//Shards
-		int var11 = this.rand.nextInt(3) + 1;
-
-		for (int var12 = 0; var12 < var11; ++var12) {
-			this.entityDropItem(new ItemStack(GaiaItem.Shard, 1, 1), 0.0F);
-		}
-
-		if (par1 && (this.rand.nextInt(4) == 0 || this.rand.nextInt(1) > 0)) {
-			this.entityDropItem(new ItemStack(GaiaItem.Shard, 1, 3), 0.0F);
-		}
-
-		//Very Rare
-		if (par1 && (this.rand.nextInt(EntityAttributes.rateraredrop) == 0 || this.rand.nextInt(1) > 0)) {
-			this.dropItem(GaiaItem.SpawnEnderGirl,1);
-		}
-	}
-
+	//Rare
 	protected void addRandomDrop() {
 		switch(this.rand.nextInt(3)) {
 		case 0:
-			this.dropItem(GaiaItem.BagOre, 1);
+			this.entityDropItem(new ItemStack(GaiaItems.Box, 1, 2), 0.0F);
 			break;
 		case 1:
-			this.dropItem(GaiaItem.BagBook, 1);
+			this.dropItem(GaiaItems.BagBook, 1);
 			break;
 		case 2:
-			this.dropItem(GaiaItem.BookEnder, 1);
+			this.dropItem(GaiaItems.BookEnder, 1);
 		}
 	}
+	
+	//================= Immunities =================//
+	public void fall(float distance, float damageMultiplier) {}
 
-	public void setCarried(int par1) {
-		this.dataWatcher.updateObject(16, Byte.valueOf((byte)(par1 & 255)));
+	public void setInWeb() {}
+	//==============================================//
+
+	public void setHeldBlockState(@Nullable IBlockState state) {
+		this.dataManager.set(CARRIED_BLOCK, Optional.fromNullable(state));
 	}
 
-
-	/**
-	 * Sets this enderman's held block state
-	 */
-	public void setHeldBlockState(IBlockState state) {
-		this.dataWatcher.updateObject(16, Short.valueOf((short)(Block.getStateId(state) & 65535)));
-	}
-
-	/**
-	 * Gets this enderman's held block state
-	 */
+	@Nullable
 	public IBlockState getHeldBlockState() {
-		return Block.getStateById(this.dataWatcher.getWatchableObjectShort(16) & 65535);
-	}
-
-	/**
-	 * Called when the entity is attacked.
-	 */
-	public boolean attackEntityFrom(DamageSource source, float amount) {
-		if (this.isEntityInvulnerable(source)) {
-			return false;
-		} else {
-			if (source.getEntity() == null || !(source.getEntity() instanceof EntityEndermite)) {
-				if (!this.worldObj.isRemote) {
-					this.setScreaming(true);
-				}
-
-				if (source instanceof EntityDamageSource && source.getEntity() instanceof EntityPlayer) {
-					if (source.getEntity() instanceof EntityPlayerMP && ((EntityPlayerMP)source.getEntity()).theItemInWorldManager.isCreative()) {
-						this.setScreaming(false);
-					} else {
-						this.isAggressive = true;
-					}
-				}
-
-				if (source instanceof EntityDamageSourceIndirect) {
-					this.isAggressive = false;
-
-					for (int i = 0; i < 64; ++i) {
-						if (this.teleportRandomly()) {
-							return true;
-						}
-					}
-
-					return false;
-				}
-			}
-
-			boolean flag = super.attackEntityFrom(source, amount);
-
-			if (source.isUnblockable() && this.rand.nextInt(10) != 0) {
-				this.teleportRandomly();
-			}
-
-			return flag;
-		}
+		return (IBlockState)((Optional)this.dataManager.get(CARRIED_BLOCK)).orNull();
 	}
 
 	/*===================================== Forge Start ==============================*/
 	public static void setCarriable(Block block, boolean canCarry) {
-		if (canCarry) carriableBlocks.add(block);
-		else          carriableBlocks.remove(block);
+		if (canCarry) CARRIABLE_BLOCKS.add(block);
+		else          CARRIABLE_BLOCKS.remove(block);
 	}
 	public static boolean getCarriable(Block block) {
-		return carriableBlocks.contains(block);
+		return CARRIABLE_BLOCKS.contains(block);
 	}
 	/*===================================== Forge End ==============================*/
 
 	public boolean isScreaming() {
-		return this.dataWatcher.getWatchableObjectByte(18) > 0;
-	}
-
-	public void setScreaming(boolean screaming) {
-		this.dataWatcher.updateObject(18, Byte.valueOf((byte)(screaming ? 1 : 0)));
+		return ((Boolean)this.dataManager.get(SCREAMING)).booleanValue();
 	}
 
 	static {
-		carriableBlocks.add(Blocks.grass);
-		carriableBlocks.add(Blocks.dirt);
-		carriableBlocks.add(Blocks.sand);
-		carriableBlocks.add(Blocks.gravel);
-		carriableBlocks.add(Blocks.yellow_flower);
-		carriableBlocks.add(Blocks.red_flower);
-		carriableBlocks.add(Blocks.brown_mushroom);
-		carriableBlocks.add(Blocks.red_mushroom);
-		carriableBlocks.add(Blocks.tnt);
-		carriableBlocks.add(Blocks.cactus);
-		carriableBlocks.add(Blocks.clay);
-		carriableBlocks.add(Blocks.pumpkin);
-		carriableBlocks.add(Blocks.melon_block);
-		carriableBlocks.add(Blocks.mycelium);
+		CARRIABLE_BLOCKS.add(Blocks.GRASS);
+		CARRIABLE_BLOCKS.add(Blocks.DIRT);
+		CARRIABLE_BLOCKS.add(Blocks.SAND);
+		CARRIABLE_BLOCKS.add(Blocks.GRAVEL);
+		CARRIABLE_BLOCKS.add(Blocks.YELLOW_FLOWER);
+		CARRIABLE_BLOCKS.add(Blocks.RED_FLOWER);
+		CARRIABLE_BLOCKS.add(Blocks.BROWN_MUSHROOM);
+		CARRIABLE_BLOCKS.add(Blocks.RED_MUSHROOM);
+		CARRIABLE_BLOCKS.add(Blocks.TNT);
+		CARRIABLE_BLOCKS.add(Blocks.CACTUS);
+		CARRIABLE_BLOCKS.add(Blocks.CLAY);
+		CARRIABLE_BLOCKS.add(Blocks.PUMPKIN);
+		CARRIABLE_BLOCKS.add(Blocks.MELON_BLOCK);
+		CARRIABLE_BLOCKS.add(Blocks.MYCELIUM);
+		CARRIABLE_BLOCKS.add(Blocks.NETHERRACK);
 	}
 
 	static class AIFindPlayer extends EntityAINearestAttackableTarget {
 		/** The player */
-		private EntityPlayer player;
-		private int field_179450_h;
-		private int field_179451_i;
 		private EntityGaiaEnderDragonGirl enderman;
+		private EntityPlayer player;
+		private int aggroTime;
+		private int teleportTime;
 
 		public AIFindPlayer(EntityGaiaEnderDragonGirl p_i45842_1_) {
 			super(p_i45842_1_, EntityPlayer.class, true);
@@ -451,8 +425,8 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 		 * Execute a one shot task or start executing a continuous task
 		 */
 		public void startExecuting() {
-			this.field_179450_h = 5;
-			this.field_179451_i = 0;
+			this.aggroTime = 5;
+			this.teleportTime = 0;
 		}
 
 		/**
@@ -460,9 +434,6 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 		 */
 		public void resetTask() {
 			this.player = null;
-			this.enderman.setScreaming(false);
-			IAttributeInstance iattributeinstance = this.enderman.getEntityAttribute(SharedMonsterAttributes.movementSpeed);
-			iattributeinstance.removeModifier(EntityGaiaEnderDragonGirl.attackingSpeedBoostModifier);
 			super.resetTask();
 		}
 
@@ -474,12 +445,11 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 				if (!this.enderman.shouldAttackPlayer(this.player)) {
 					return false;
 				} else {
-					this.enderman.isAggressive = true;
 					this.enderman.faceEntity(this.player, 10.0F, 10.0F);
 					return true;
 				}
 			} else {
-				return super.continueExecuting();
+				return this.targetEntity != null && ((EntityPlayer)this.targetEntity).isEntityAlive() ? true : super.continueExecuting();
 			}
 		}
 
@@ -488,26 +458,21 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 		 */
 		public void updateTask() {
 			if (this.player != null) {
-				if (--this.field_179450_h <= 0) {
+				if (--this.aggroTime <= 0) {
 					this.targetEntity = this.player;
 					this.player = null;
 					super.startExecuting();
-					this.enderman.playSound("mob.endermen.stare", 1.0F, 1.0F);
-					this.enderman.setScreaming(true);
-					IAttributeInstance iattributeinstance = this.enderman.getEntityAttribute(SharedMonsterAttributes.movementSpeed);
-					iattributeinstance.applyModifier(EntityGaiaEnderDragonGirl.attackingSpeedBoostModifier);
 				}
 			} else {
 				if (this.targetEntity != null) {
-					if (this.targetEntity instanceof EntityPlayer && this.enderman.shouldAttackPlayer((EntityPlayer)this.targetEntity)) {
-						if (this.targetEntity.getDistanceSqToEntity(this.enderman) < 16.0D) {
+					if (this.enderman.shouldAttackPlayer((EntityPlayer)this.targetEntity)) {
+						if (((EntityPlayer)this.targetEntity).getDistanceSqToEntity(this.enderman) < 16.0D) {
 							this.enderman.teleportRandomly();
 						}
 
-						this.field_179451_i = 0;
-					}
-					else if (this.targetEntity.getDistanceSqToEntity(this.enderman) > 256.0D && this.field_179451_i++ >= 30 && this.enderman.teleportToEntity(this.targetEntity)) {
-						this.field_179451_i = 0;
+						this.teleportTime = 0;
+					} else if (((EntityPlayer)this.targetEntity).getDistanceSqToEntity(this.enderman) > 256.0D && this.teleportTime++ >= 30 && this.enderman.teleportToEntity(this.targetEntity)) {
+						this.teleportTime = 0;
 					}
 				}
 
@@ -527,7 +492,7 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 		 * Returns whether the EntityAIBase should begin execution.
 		 */
 		public boolean shouldExecute() {
-			return !this.enderman.worldObj.getGameRules().getBoolean("mobGriefing") ? false : (this.enderman.getHeldBlockState().getBlock().getMaterial() == Material.air ? false : this.enderman.getRNG().nextInt(4000) == 0);
+			return this.enderman.getHeldBlockState() == null ? false : (!this.enderman.worldObj.getGameRules().getBoolean("mobGriefing") ? false : this.enderman.getRNG().nextInt(2000) == 0);
 		}
 
 		/**
@@ -540,17 +505,18 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 			int j = MathHelper.floor_double(this.enderman.posY + random.nextDouble() * 2.0D);
 			int k = MathHelper.floor_double(this.enderman.posZ - 1.0D + random.nextDouble() * 2.0D);
 			BlockPos blockpos = new BlockPos(i, j, k);
-			Block block = world.getBlockState(blockpos).getBlock();
-			Block block1 = world.getBlockState(blockpos.down()).getBlock();
+			IBlockState iblockstate = world.getBlockState(blockpos);
+			IBlockState iblockstate1 = world.getBlockState(blockpos.down());
+			IBlockState iblockstate2 = this.enderman.getHeldBlockState();
 
-			if (this.func_179474_a(world, blockpos, this.enderman.getHeldBlockState().getBlock(), block, block1)) {
-				world.setBlockState(blockpos, this.enderman.getHeldBlockState(), 3);
-				this.enderman.setHeldBlockState(Blocks.air.getDefaultState());
+			if (iblockstate2 != null && this.canPlaceBlock(world, blockpos, iblockstate2.getBlock(), iblockstate, iblockstate1)) {
+				world.setBlockState(blockpos, iblockstate2, 3);
+				this.enderman.setHeldBlockState((IBlockState)null);
 			}
 		}
 
-		private boolean func_179474_a(World worldIn, BlockPos p_179474_2_, Block p_179474_3_, Block p_179474_4_, Block p_179474_5_) {
-			return !p_179474_3_.canPlaceBlockAt(worldIn, p_179474_2_) ? false : (p_179474_4_.getMaterial() != Material.air ? false : (p_179474_5_.getMaterial() == Material.air ? false : p_179474_5_.isFullCube()));
+		private boolean canPlaceBlock(World p_188518_1_, BlockPos p_188518_2_, Block p_188518_3_, IBlockState p_188518_4_, IBlockState p_188518_5_) {
+			return !p_188518_3_.canPlaceBlockAt(p_188518_1_, p_188518_2_) ? false : (p_188518_4_.getMaterial() != Material.AIR ? false : (p_188518_5_.getMaterial() == Material.AIR ? false : p_188518_5_.isFullCube()));
 		}
 	}
 
@@ -565,7 +531,7 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 		 * Returns whether the EntityAIBase should begin execution.
 		 */
 		public boolean shouldExecute() {
-			return !this.enderman.worldObj.getGameRules().getBoolean("mobGriefing") ? false : (this.enderman.getHeldBlockState().getBlock().getMaterial() != Material.air ? false : this.enderman.getRNG().nextInt(8000) == 0);
+			return this.enderman.getHeldBlockState() != null ? false : (!this.enderman.worldObj.getGameRules().getBoolean("mobGriefing") ? false : this.enderman.getRNG().nextInt(200) == 0);
 		}
 
 		/**
@@ -580,15 +546,17 @@ public class EntityGaiaEnderDragonGirl extends EntityMobBase {
 			BlockPos blockpos = new BlockPos(i, j, k);
 			IBlockState iblockstate = world.getBlockState(blockpos);
 			Block block = iblockstate.getBlock();
+			RayTraceResult raytraceresult = world.rayTraceBlocks(new Vec3d((double)((float)MathHelper.floor_double(this.enderman.posX) + 0.5F), (double)((float)j + 0.5F), (double)((float)MathHelper.floor_double(this.enderman.posZ) + 0.5F)), new Vec3d((double)((float)i + 0.5F), (double)((float)j + 0.5F), (double)((float)k + 0.5F)), false, true, false);
+			boolean flag = raytraceresult != null && raytraceresult.getBlockPos().equals(blockpos);
 
-			if (EntityGaiaEnderDragonGirl.carriableBlocks.contains(block)) {
+			if (EntityGaiaEnderDragonGirl.CARRIABLE_BLOCKS.contains(block) && flag) {
 				this.enderman.setHeldBlockState(iblockstate);
-				world.setBlockState(blockpos, Blocks.air.getDefaultState());
+				world.setBlockToAir(blockpos);
 			}
 		}
-		
-		public int getMaxSpawnedInChunk() {
-			return 1;
-		}
+	}
+	
+	public int getMaxSpawnedInChunk() {
+		return 1;
 	}
 }
